@@ -3,8 +3,7 @@ package io.seata.jit.server;
 import io.seata.jit.Starter;
 import io.seata.jit.TestCase;
 
-import java.io.IOException;
-import java.io.OutputStream;
+import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -25,30 +24,55 @@ public class Main {
     }
 
     public static void main(String[] args) throws Exception {
-        startDepends();
+        startDepends(args);
 
-        startTesters();
+        startTesters(args);
     }
 
-    public static void startDepends() throws Exception {
+    public static void startDepends(String[] args) throws Exception {
         // 启动相关服务
         for (Starter dependServer : dependServers) {
-            dependServer.start();
+            new Thread(() -> {
+                try {
+                    dependServer.start(args);
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+            }).start();
         }
+        sleep(30);
     }
 
 
-    public static void startTesters() throws IOException, InterruptedException {
+    public static void startTesters(String[] args) throws IOException, InterruptedException {
         List<Process> processes = new ArrayList<>(4);
         for (TestCase testCase : testCases) {
-            System.out.println(testCase.getTitle());
-            System.out.println(testCase.getContent());
+            System.err.println(testCase.getTitle());
+            System.err.println(testCase.getContent());
+            System.err.println(System.getProperty("java.class.path"));
             for (TestCase.Service service : testCase.getCommands()) {
-                ProcessBuilder pb = new ProcessBuilder(service.getCommand());
-                Process start = pb.start();
-                processes.add(start);
+                System.err.println(service.getCommand());
+
+                new Thread(() -> {
+                    try {
+                        Process start = Runtime.getRuntime().exec(service.getCommand());
+
+                        processes.add(start);
+                        BufferedReader br = new BufferedReader(new InputStreamReader(start.getInputStream()));
+
+                        String line;
+                        while ((line = br.readLine()) != null) {
+                            System.out.println(line);
+                        }
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+
+                }).start();
+
                 sleep(service.getInterval());
             }
+            sleep(testCase.getExecTime());
             for (Process process : processes) {
                 process.destroy();
             }
